# ConvexHull

gjk/: README.md  gjk.cpp
gjk-distance/: CMakeLists.txt  README.md  gjk.cpp  gjk_update.cpp  main.cpp
gjk-distance/include/: gjk.hpp
gjk-distance/tool/: generate_convexhull.cpp
gjk-distance/view/: visualization.py
gjk-overlapping/: README.md  gjk.cpp  main.cpp
gjk-overlapping/include/: gjk.hpp
gjk-overlapping/tool/: generate_convexhull.cpp  save_points.cpp
gjk/tool/: save_points.cpp
